# FreeCodeCamp_Machine_Learning

./: main.py  pyproject.toml
01_supervised_learning.ipynb/: main.ipynb
