[project]
name = "freecodecamp-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn==0.12.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn==1.6.1",
]
